# parcatgateway

./: .gitignore  CNAME  README.md  forsale.json  gateway_events.json  index.html  maintenance.json  movies.json  parc_board.html  requirements.txt  scrape_events.py  scrape_movies.py  scrape_realestate.py  tv.html  wrangler.jsonc
.github/workflows/: update_events.yaml
github/workflows/: update_events.yaml
scraper/: README.md  pyproject.toml  scrape_all.py  scrape_movies.py
