[project]
name = "parc-gateway-scripts"
version = "0.1.0"
description = "Scripts for updating the Parc at Gateway community board."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = []
